--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,7 +4,7 @@ server {
 
   location / {
     root   /usr/share/nginx/html;
-    index  index.html index.htm;
+    index  public/index.html public/index.htm;
 
     # to redirect all the requests to index.html, 
     # useful when you are using react-router
