--- a/deploy-ansible.yml
+++ b/deploy-ansible.yml
@@ -2,6 +2,11 @@
 - hosts: dev
   become: True
   tasks:
+    - name: Install python pip
+      apt:
+        name: python-pip
+        state: present
+        
     - name: Start the container
       docker_container:
         name: exam105-fe
