--- a/deploy-ansible.yml
+++ b/deploy-ansible.yml
@@ -6,7 +6,11 @@
       apt:
         name: python-pip
         state: present
-        
+        update_cache: yes
+    - name: Install docker-py python module
+      pip:
+        name: docker-py
+        state: present    
     - name: Start the container
       docker_container:
         name: exam105-fe
