--- a/deploy-ansible.yml
+++ b/deploy-ansible.yml
@@ -16,3 +16,5 @@
         name: exam105-fe
         image: "muhammad1/exam105-fe:{{DOCKER_TAG}}"
         state: started
+        published_ports:
+          - 0.0.0.0:8090:80
